Completado resumen y abstract (#62)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -32,6 +32,14 @@
 % ABSTRACT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\chapter*{Resumen}
+
+\import{tex/}{resumen.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ABSTRACT
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter*{Abstract}
 
 \import{tex/}{abstract.tex}
