--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -1,2 +1,18 @@
-%% TODO
-TODO
+
+Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor}. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
+
+Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron de manera independiente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
+
+Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{alma991007242979704990} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
+
+Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del computador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. Con la llegada de las gráficas modernas y la informática gráfica la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, gracias a trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
+
+A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
+
+Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen un alto prestigio entre las revistas dedicadas al mundo de la investigación. Por ejemplo, en el ámbito puramente fractal, la revista \href{https://www.worldscientific.com/worldscinet/fractals}{\textcolor{blue}{\textit{Fractals}}}. Por su parte, en el ámbito de problemas inversos encontramos la revista \href{https://iopscience.iop.org/journal/0266-5611}{\textcolor{blue}{\textit{Inverse Problems}}}.
+
+La geometría fractal tiene también aplicación vigente en la teoría de identificación de parámetros, ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. Con respecto a desarrollo de herramientas, podemos encontrar en la revista `Fractals' el artículo de 2019 \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}.
+
+<<TODO Añadir estado del arte de informática>>
+
+
