Añadido estado del arte y descripción del problema (#62)

--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -15,4 +15,13 @@ La geometría fractal tiene también aplicación vigente en la teoría de identi
 
 <<TODO Añadir estado del arte de informática>>
 
+Vemos por tanto que la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
+
+Para ello, en este documento se presenta desde el punto de vista matemático los conceptos y resultados principales de la geometría fractal, utilizando no sólo desarrollos teóricos y texto, sino combinándolos también con ejemplos, imágenes y códigos para graficarlas. De esta forma se ofrece un contenido fácil de seguir y atractivo para el lector. 
+
+Aprovechando también el hardware y software moderno junto con conocimientos en informática gráfica, se crea como producto software una web interactiva en la que visualizar fractales, tanto 2D como 3D. Esta web ofrece la posibilidad de modificar dinámicamente parámetros tanto de los propios fractales como de los algoritmos utilizados para graficarlos. Se permite también movimiento por la escena, pudiendo observar detalles de los fractales incluso a escalas pequeñas. Con esta web se desarrolla un producto que es accesible para cualquier persona que tenga acceso a internet, acercándola al mundo de los fractales.
+
+Esta visualización se ha implementado utilizando técnicas avanzadas en informática gráfica, las cuales están minuciosamente introducidas y explicadas en esta memoria. Así además introducimos al lector varios conceptos y métodos de la informática gráfica, particularizando su uso a la síntesis de imágenes fractales.
+
+En conclusión, con el objetivo de familiarizar al lector con la disciplina fractal se redacta una introducción teórica a la misma acompañada de imágenes, códigos y una web interactiva en la que poder ver desde cerca por uno mismo los fractales.
 
