--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -1,6 +1,6 @@
 \begin{thebibliography}{99}
     
-\bibitem{rubiano} Rubiano, G. (2020). \textit{Iteración y fractales (con mathematica ®)}. Universidad Nacional de Colombia.
+\bibitem{rubiano} Rubiano, G.N., (2020). \textit{Iteración y Fractales (con Mathematica ®)}. Universidad Nacional de Colombia.
 
 \bibitem{Dreher} F. Dreher; T. Samuel. (2014). Continuous Images of Cantor’s Ternary Set. \textit{The American Mathematical Monthly}, 121(7), 640–643. \url{https://doi.org/10.4169/amer.math.monthly.121.07.640}.
 
@@ -62,7 +62,11 @@
 
 \bibitem{RT-que-es} López, P. (2020, 30 abril). \textit{Ray Tracing: ¿Qué es y para qué sirve? - Definición}. GEEKNETIC. \url{https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve}
 
+\bibitem{Shirley} Shirley, P. (2020). \textit{Ray Tracing in One Weekend}.\url{https://raytracing.github.io/books/RayTracingInOneWeekend.html}.
+
 \bibitem{Hart-1995} Hart, J. (1995). Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces. \textit{The Visual Computer}. \url{https://doi.org/10.1007/s003710050084}
+
+\bibitem{Hart-1989} Hart, J., Sandin, D., Kauffman, L. (1989). Ray tracing deterministic 3-D fractals. \textit{ACM SIGGRAPH Computer Graphics}.vol 23. 289-296. \url{https://doi.org/10.1145/74334.74363} 
 
 \bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
 
