Finalizada planificación y presupuestos (#55)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -113,6 +113,11 @@
 
 \import{tex/capitulos/}{capitulo-4.tex}
 
+\chapter*{Planificación y presupuesto}
+\label{chap:planificacion-presupuesto}
+
+\import{tex/capitulos/}{planificacion-presupuestos.tex}
+
 \chapter{Introducción a las herramientas de visualización}
 \label{chap:visualizacion}
 
