--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -27,6 +27,7 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{tikz}
+\usepackage{multirow}
 %\usepackage[]{algorithm2e}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
