Completado estado del arte de informática

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -85,4 +85,9 @@ Esta última referencia es la traducción a inglés de las notas en francés de 
 \bibitem{distance-fractals} Quilez, I. (2004). \textit{Distance to fractals}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/distancefractals/}
 
 \bibitem{mandelbub} Quilez, I. (2009). \textit{Mandelbub}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/mandelbulb/}
+
+%% video de estado de arte
+
+\bibitem{RT-AI} Two Minute Papers. (2022, 26 abril). \textit{NVIDIA’s Ray Tracing AI - This is The Next Level!} [Vídeo]. YouTube. \url{https://www.youtube.com/watch?v=yl1jkmF7Xug}
+
 \end{thebibliography}
