--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -5,7 +5,9 @@ Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre F
 
 Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{alma991007242979704990} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
 
-Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del computador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. Con la llegada de las gráficas modernas y la informática gráfica la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, gracias a trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
+Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del computador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
+
+Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing'. Gracias a ella, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, gracias a trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
 
 A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
 
@@ -13,9 +15,15 @@ Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen 
 
 La geometría fractal tiene también aplicación vigente en la teoría de identificación de parámetros, ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. Con respecto a desarrollo de herramientas, podemos encontrar en la revista `Fractals' el artículo de 2019 \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}.
 
-<<TODO Añadir estado del arte de informática>>
+Por su parte, la revolución informática afecta en particular a las tarjetas gráficas.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, que es de los últimos modelos, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
 
-Vemos por tanto que la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
+Sobre esto, la última tendencia en computación gráfica, y particularmente en ray-tracing, es aplicar `Deep Learning' en la síntesis de imágenes por ordenador. En contraste con la tradicional forma de programar potentes algoritmos para graficar imágenes lo más realistas posibles, el uso de redes neuronales en muchas situaciones ofrece resultados incluso mejores. Es por esto que este es un campo abierto a día de hoy en informática gráfica. Una explicación más detallada a la par que dinámica se puede encontrar en \cite{RT-AI}.
+
+Vemos que el ray tracing está muy a la orden del día, pero sólo hace unos 3 años que existen herramientas propiamente dedicadas al ray-tracing, entre las que destacan \href{https://nvpro-samples.github.io/vk_raytracing_tutorial_KHR/}{\textcolor{blue}{Vulkan con su extensión KHR}}. El principal defecto que tienen es que solo pueden ser ejecutadas en GPUs muy caras y además sólo trabajan con mallas de polígonos. La alternativa a ellas es simular el ray-tracing en herramientas de visualización estándar.
+
+Debemos también mencionar el evento \href{https://s2022.siggraph.org/}{\textcolor{blue}{Siggraph}}, que es un evento anual en el que se exponen nuevas técnicas y avances en el mundo de la computación gráfica. En su web podemos encontrar muchos papers y artículos relacionados con la generación de imágenes. Por ejemplo en la siguiente encontramos muchos textos con fecha de 2021: \url{https://kesen.realtimerendering.com/sig2021.html}.
+
+Como hemos podido comprobar unos párrafos atrás, la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
 
 Para ello, en este documento se presenta desde el punto de vista matemático los conceptos y resultados principales de la geometría fractal, utilizando no sólo desarrollos teóricos y texto, sino combinándolos también con ejemplos, imágenes y códigos para graficarlas. De esta forma se ofrece un contenido fácil de seguir y atractivo para el lector. 
 
