Añadido análisis y diseño

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -118,6 +118,11 @@
 
 \import{tex/capitulos/}{planificacion-presupuestos.tex}
 
+\chapter*{Análisis y diseño}
+\label{chap:analisis-diseno}
+
+\import{tex/capitulos/}{analisis-diseno.tex}
+
 \chapter{Introducción a las herramientas de visualización}
 \label{chap:visualizacion}
 
