--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -85,11 +85,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter*{Introducción}
+\addcontentsline{toc}{chapter}{Introducción}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
 
 \import{tex/capitulos/}{introduccion.tex}
+
+\chapter*{Objetivos}
+\addcontentsline{toc}{chapter}{Objetivos}
+\label{chap:Objetivos}
+
+\import{tex/}{objetivos.tex}
 
 
 \chapter{El concepto de \textit{fractal}.}
@@ -142,6 +149,12 @@
 \label{chap:fractales-3D}
 
 \import{tex/capitulos/}{capitulo-8.tex}
+
+\chapter*{Conclusiones}
+\addcontentsline{toc}{chapter}{Conclusiones}
+\label{chap:conclusiones}
+
+\import{tex/}{conclusiones.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
