--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -356,6 +356,7 @@ Llamamos \textbf{dimensión de Hausdorff} de un conjunto $A$ al único valor $\d
 \end{definicion}
 
 \subsection{Dimensión topológica}
+\label{subsection:dim-topologica}
 
 Por último estudiaremos un concepto de dimensión aplicable a espacios topológicos. La \textbf{dimensión topológica} se define inductivamente de la siguiente forma:
 
