--- a/memoria/tex/capitulos/capitulo-4.tex
+++ b/memoria/tex/capitulos/capitulo-4.tex
@@ -430,6 +430,7 @@ Como ya hemos podido ver, los SFI nos abren un mundo de posibilidades para crear
 En este contexto, la mejor herramienta que tenemos es el conocido como \textit{teorema del collage}, que enunciamos a continuación.
 
 \begin{teorema}[El teorema del collage]
+    \label{th:collage}
     Sean $(X,d)$ un espacio métrico completo, $L\in\mathcal{H}(X)$ y $\varepsilon\geq 0$. Si $\{w_i:i=1,\dots,N\}$ es un SFI en $X$ con constante de contractividad $0\leq s < 1$ cumpliendo que
     $$
     h\left(L,\bigcup_{i=1}^N w_i(L)\right) \leq \varepsilon,
