--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -90,4 +90,10 @@ Esta última referencia es la traducción a inglés de las notas en francés de 
 
 \bibitem{RT-AI} Two Minute Papers. (2022, 26 abril). \textit{NVIDIA’s Ray Tracing AI - This is The Next Level!} [Vídeo]. YouTube. \url{https://www.youtube.com/watch?v=yl1jkmF7Xug}
 
+\bibitem{SIGGRAPH-2014} \textit{SIGGRAPH 2014 News: ILM Reps Present New Fractal Rendering Technique}. (2017, 1 junio). Pluralsight. Recuperado 29 de mayo de 2022, de \url{https://www.pluralsight.com/blog/film-games/siggraph-2014-news-ilm-reps-present-new-fractal-rendering-technique}.
+
+\bibitem{fractals-films} Doolan, D. C. (2018, 4 diciembre). \textit{Examples of Graphics, Animation and Fractals in Film}. Dr. Daniel C. Doolan News and Photos. Recuperado 29 de mayo de 2022, de \url{https://dcdoolan.wordpress.com/2017/01/23/examples-of-graphics-animation-and-fractals-in-film/}.
+
 \end{thebibliography}
+
+
